set up user set up page
